# em2native-proto

./: .gitmodules  CMakeLists.txt  app1-files.cmake  app7-files.cmake  app8-files.cmake  duk-srcs.cmake
.github/workflows/: CI.yaml
app/: CMakeLists.txt
cfg/: _all.cmake  _ghactionprepare.cmake  _lib.cmake  _prepare.cmake  configs.cmake  em2c-ios-gles.cmake  em2c-mac-angle-metal.cmake  em2c-posix-gles.cmake  em2c-tvos-gles.cmake  em2c-win64-angle-dx11.cmake  em2c-win64-tracker-pvr.cmake  em2c-win64-tracker-vulkan.cmake  em2c-winstore-angle-dx11.cmake  sdl-android.cmake  yfrm-posix-gles.cmake  yfrm-win64-angle-dx11.cmake  yfrm-win64-angle-vulkan.cmake  yfrm-win64-tracker-pvr.cmake  yfrm-win64-tracker-vulkan.cmake
jsprebuild/: package-lock.json  rollup.config.js
launcher/duk/: bootstrap.js  fakedlfcn.c  yuniduk.c
launcher/duk/print/: README.md  duk_print_alert.c
nodejs/: CMakeLists.txt
package/: _genproject.cmake
package/android/android-project/: build.gradle
package/android/android-project/app/: build.gradle
package/android/android-project/app/jni/: CMakeLists.txt
package/android/android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
package/android/android-project/gradle/wrapper/: gradle-wrapper.properties
runtime/: .gitignore  audioctx-mini.mjs  cwgl.mjs  index.js  launcher.js  launcher.mjs  nccc-node.mjs  ncccutil.mjs  package.json  port-native.js  run_nodejs.js  run_nodejs.mjs  wasmproxy.mjs  webgl-cwgl.mjs
wasm2cruntime/: rt.c
